--- a/styles.css
+++ b/styles.css
@@ -1271,6 +1271,8 @@ picture:hover img {
   /* margin: 15px 0; */
 }
 .star-rating-highlited {
+  margin-top: 11px;
+  margin-bottom: 27px;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -1455,6 +1457,7 @@ picture:hover img {
   letter-spacing: 0.4000000059604645px;
   text-align: center;
   margin-bottom: 20px;
+  color: #4a4a4a;
 }
 
 .sidebar {
@@ -1483,7 +1486,7 @@ picture:hover img {
   width: 100%;
   max-width: 209px;
   height: 0.5px;
-  background-color: #49887b;
+  background: rgba(73, 136, 123, 0.20);
 }
 
 .sidbar-data {
