--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@ select {
 
 /* Remove default styling for anchors */
 a {
+  
   text-decoration: none;
   color: inherit;
 }
@@ -95,6 +96,10 @@ blockquote {
 img {
   max-width: 100%;
   height: auto;
+}
+
+button, a {
+  cursor: pointer;
 }
 
 /* Hide default checkbox */
@@ -1298,6 +1303,54 @@ picture:hover img {
   color: #666666;
 }
 
+.scholarship-card {
+  padding: 28px;
+  background: white;
+  border-radius: 12px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 36px;
+  &:hover img{
+    scale: 1.1;
+  }
+}
+
+.scholarship-card-content > h4 {
+  font-weight: bold;
+  font-size: 22px;
+  color: #4a4a4a;
+}
+
+.scholarship-card-content > p {
+  max-width: 365px;
+  margin-top: 4px;
+  font-size: 16px;
+  color: #666666;
+}
+
+.scholarship-card-content > button {
+  margin-top: 15px;
+  font-weight: bold;
+  color: #49887b;
+  text-decoration: underline;
+}
+
+.scholarship-card-image-parent{
+  width: 171px;
+  height: 123px;
+  overflow: hidden;
+  border-radius: 12px;
+}
+
+.scholarship-card-image-parent > img{
+  border-radius: 12px;
+  transition: all 0.3s ease-in;
+  /* &:hover{
+    scale: 1.1;
+  } */
+}
+
 .who-is-for {
   width: 100%;
   background-color: var(--white);
@@ -1487,7 +1540,7 @@ picture:hover img {
   width: 100%;
   max-width: 209px;
   height: 0.5px;
-  background: rgba(73, 136, 123, 0.20);
+  background: rgba(73, 136, 123, 0.2);
 }
 
 .sidbar-data {
