--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,11 @@
   --white: #ffffff;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+
 /* Reset basic elements */
 *,
 *::before,
@@ -390,7 +395,7 @@ header > section > nav > ul > li:hover {
 .hero-section {
   /* min-height: 562px; */
   background-image: url("./images/hero-bg-2.webp");
-  /* background-position: bottom center; */
+  background-position: top center;
   padding-top: 56px;
   padding-bottom: 15rem;
   background-repeat: no-repeat;
@@ -791,7 +796,7 @@ header > section > nav > ul > li:hover {
 .workshop-include-section {
   width: 100%;
   background-color: var(--white);
-  padding: 30px;
+  padding: 26px;
   border-radius: 10px;
   transition: all 0.3s ease-in;
   margin-bottom: 20px;
@@ -816,8 +821,12 @@ header > section > nav > ul > li:hover {
   font-weight: 500;
 }
 
+.workshop-include-section-image-parent{
+  max-width: 165px;
+}
+
 .workshop-include-section img {
-  min-width: 200px;
+  width: 100%;
   height: auto;
   transition: all 0.3s ease-in;
 }
