--- a/styles.css
+++ b/styles.css
@@ -363,7 +363,7 @@ header > section > nav > ul > li {
   transition: color 0.3s ease-in-out;
 }
 
-header > section > nav > ul > li:hover {
+header > section > nav > ul > li:hover, .privacy-policy:hover, .tandc:hover {
   color: #dbaf64;
   transition: color 0.3s ease-in-out;
 }
@@ -922,8 +922,10 @@ header > section > nav > ul > li:hover {
 } */
 
 .habit-item {
+  width: 100%;
+  height: 253px;
   max-width: 222px;
-  max-height: 229px;
+  max-height: 253px;
   text-align: center;
   background-color: white;
   padding: 12px 12px;
@@ -948,7 +950,7 @@ header > section > nav > ul > li:hover {
 
 .habit-heading {
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 19.57px;
   text-align: center;
   text-underline-position: from-font;
@@ -975,6 +977,7 @@ header > section > nav > ul > li:hover {
   border-radius: 10px;
   margin-top: 20px;
   padding: 24px;
+  transition: all 0.3s ease-in;
 }
 
 .habit-seven-img {
@@ -986,14 +989,16 @@ header > section > nav > ul > li:hover {
   transition: all 0.3s ease-out;
 }
 
+.habit-seven:hover {
+  box-shadow: 4px 4px 12px 0px #0000001f;
+  transition: all 0.3s ease-in;
+}
+
 .habit-seven:hover img {
   scale: 1.2;
   transition: all 0.3s ease-in;
 }
 
-.habit-heading {
-  font-weight: 600;
-}
 .habit-text {
   margin-top: 4px;
   color: #666666;
@@ -1112,7 +1117,7 @@ picture:hover img {
 }
 
 .weekday {
-  font-weight: 600;
+  font-weight: 500;
   color: #44557c;
 }
 
