--- a/styles.css
+++ b/styles.css
@@ -526,7 +526,7 @@ header > section > nav > ul > li:hover, .privacy-policy:hover, .tandc:hover {
   height: 46px;
   width: 100%;
   /* padding: 9px 56px; */
-  background: #ffd700;
+  background: #FFC76A;
   color: #418b78;
   font-size: 18px;
   font-weight: bold;
