github issue fixed

--- a/styles-lg.css
+++ b/styles-lg.css
@@ -204,7 +204,10 @@
   .benefit-img {
     min-height: auto;
   }
+.habit-item{
 
+  height: auto;
+}
   .scholarship-card-image-parent {
     display: none;
   }
