--- a/styles-md.css
+++ b/styles-md.css
@@ -72,7 +72,7 @@ align-items: center;
     width: 50%;
   }
   .benefits {
-    padding: 30px 10px !important;
+    padding: 30px 10px;
   }
   .benefits-sections img {
     height: 200px;
@@ -208,6 +208,7 @@ align-items: center;
     border-bottom: none;
   }
   .who-is-for-item-text .heading {
+    font-weight: 500;
     text-align: center;
   }
   .who-is-for-item-text .text-details {
