--- a/styles-xsm.css
+++ b/styles-xsm.css
@@ -8,7 +8,7 @@
     background-image: url(https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/hero-bg-sm.webp);
   }
   .hero-section-ty {
-    background-image: url("./images/thank-you/hero-bg-sm.webp");
+    background-image: url("./images/thank-you/hero-bg-sm.png");
   }
   .ty-session-counter {
     background-image: url("https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/thank-you/timer-bg.webp");
