--- a/styles-sm.css
+++ b/styles-sm.css
@@ -1,6 +1,7 @@
 @media screen and (max-width: 640px) {
   .logo {
     margin-left: -16px;
+    margin-top: -12px;
     max-width: 122.222px;
     height: 40px;
   }
