github issue fixed

--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,10 @@ a {
   cursor: pointer;
 }
 
+.hidden {
+  display: none;
+}
+
 /* Hide default checkbox */
 .custom-checkbox {
   appearance: none;
