--- a/styles-lg.css
+++ b/styles-lg.css
@@ -84,8 +84,8 @@
   .hero-section {
     /* background-image: url(https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/hero-bg-sm.webp); */
     padding-top: 36px;
-    padding-left: 10px !important;
-    padding-right: 10px !important;
+    padding-left: 22px;
+    padding-right: 22px;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: top;
@@ -134,12 +134,14 @@
     display: none;
   }
   .video-section {
+    margin-bottom: 36px;
     position: relative;
-    width: calc(100vw - 40px);
-    height: 231px;
+    width: 100%;
+    height: 100%;
+    /* width: calc(100vw - 40px);
+    height: 231px; */
     border-radius: 13px;
     overflow: hidden;
-    margin: 0 10px;
   }
   .first-col.content {
     width: 100%;
@@ -177,9 +179,9 @@
   .flip-card-inner {
     transform: rotateY(0deg);
   }
-.session-counter-hero{
-  display: none;
-}
+  .session-counter-hero, .hr-hero {
+    display: none;
+  }
   .session-counter-home h3 {
     display: none;
   }
