--- a/styles-xsm.css
+++ b/styles-xsm.css
@@ -7,6 +7,14 @@
   .hero-section {
     background-image: url(https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/hero-bg-sm.webp);
   }
+  .video-section {
+    position: relative;
+    width: calc(100vw - 40px);
+    height: 231px;
+    border-radius: 13px;
+    overflow: hidden;
+    margin: 0 10px;
+  }
   .hero-section-ty {
     background-image: url("./images/thank-you/hero-bg-sm.png");
   }
