--- a/styles.css
+++ b/styles.css
@@ -399,7 +399,7 @@ header > section > nav > ul > li:hover,
 /* Hero Section */
 .hero-section {
   /* min-height: 562px; */
-  background-image: url("./images/hero-bg-2.webp");
+  background-image: url("./images/hero-bg.webp");
   background-position: top center;
   padding-top: 56px;
   padding-bottom: 12rem;
