--- a/styles-lg.css
+++ b/styles-lg.css
@@ -78,9 +78,9 @@
     display: inline-block;
     animation: zoomText 3s infinite ease-in-out;
   }
-  .hero-clip-path {
+  /* .hero-clip-path {
     clip-path: none;
-  }
+  } */
   .hero-section {
     /* background-image: url(https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/hero-bg-sm.webp); */
     padding-top: 36px;
