github issue fixed

--- a/styles-xsm.css
+++ b/styles-xsm.css
@@ -27,4 +27,16 @@
   .grid-responsive {
     grid-template-columns: repeat(1, 1fr);
   }
+  .testimonial-div {
+    padding-top: 0px !important;
+  }
+  .testimonial-heading {
+    display: none;
+  }
+  .whats-say-subheading{
+    font-size: 16px;
+  }
+  .testimonial-heading-mobile {
+    display: block;
+  }
 }
