--- a/styles-md.css
+++ b/styles-md.css
@@ -8,6 +8,7 @@
     height: 63px;
   }
   .ws-iconbox:nth-child(3) {
+    max-width: 100%;
     height: 110px;
   }
   .flip-card-front,
@@ -22,9 +23,7 @@
   .flip-card-back {
     align-items: center;
     text-align: start;
-  }
-  .ws-iconbox:nth-child(3) {
-    max-width: 100%;
+    padding-left: 3rem;
   }
   .ws-iconbox-text h4 {
     text-align: left;
