--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@ select {
   font-family: inherit;
   font-size: inherit;
   color: inherit;
+  appearance: auto
 }
 
 /* Remove default styling for anchors */
