--- a/styles-lg.css
+++ b/styles-lg.css
@@ -41,7 +41,6 @@
     justify-content: center;
     align-items: center;
   }
-
   .last-day-register {
     position: relative;
     transition: all 0.3s ease-in-out;
@@ -183,7 +182,7 @@
     margin-bottom: 36px;
     position: relative;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     /* width: calc(100vw - 40px);
     height: 231px; */
     border-radius: 13px;
