--- a/styles-xsm.css
+++ b/styles-xsm.css
@@ -19,6 +19,7 @@
     /* margin: 0 10px; */
   }
   .hero-section-ty {
+    min-height: 248px;
     background-image: url("./images/thank-you/hero-bg-sm.png");
   }
   .ty-session-counter {
@@ -33,7 +34,7 @@
   .testimonial-heading {
     display: none;
   }
-  .whats-say-subheading{
+  .whats-say-subheading {
     font-size: 16px;
   }
   .testimonial-heading-mobile {
