--- a/styles.css
+++ b/styles.css
@@ -2267,7 +2267,7 @@ picture:hover img {
   height: 105px;
   background-color: #f9f9fb;
   padding: 14px;
-  margin-top: 80px;
+  margin-top: 40px;
 }
 
 .footer-data {
@@ -2354,10 +2354,11 @@ picture:hover img {
 
   font-size: 14px;
 
-  font-weight: 400;
+  font-weight: 500;
   line-height: normal;
 }
 .ty-card p {
+  margin-top: 12px;
   color: #666;
   font-size: 14px;
   font-weight: 500;
@@ -2365,7 +2366,7 @@ picture:hover img {
 }
 .ty-card span {
   color: #797979;
-  font-family: "Greycliff CF";
+  font-weight: 500;
   font-size: 11px;
 
   font-weight: 400;
@@ -2375,8 +2376,7 @@ picture:hover img {
   opacity: 0.8;
   color: #49887b;
   font-size: 11px;
-
-  font-weight: 400;
+  font-weight: 600;
   line-height: 21px;
   text-decoration-line: underline;
 }
@@ -2400,8 +2400,9 @@ picture:hover img {
   width: 100%;
   height: 43px;
   border-radius: 30px;
-  border: 1px solid #e4e4e4;
+  border: 1.5px solid #e4e4e4;
   background: #fff;
+  box-shadow: 0px 4px 20px 0px rgba(43, 43, 43, 0.08);
 }
 .ty-form-group svg {
   position: absolute;
@@ -2518,6 +2519,11 @@ picture:hover img {
   margin-left: 20px;
   color: #4a4a4a;
   position: relative;
+  line-height: 24px;
+}
+
+.step-content > p {
+  font-size: 18px;
 }
 
 .session-counter-home h3 {
@@ -2611,9 +2617,7 @@ picture:hover img {
 .counter-card h6 {
   color: #49887b;
   text-align: center;
-  font-family: "Greycliff CF";
   font-size: 30.638px;
-
   font-weight: 700;
   line-height: normal;
 }
@@ -2621,7 +2625,6 @@ picture:hover img {
 .counter-card-hero h6 {
   color: #49887b;
   text-align: center;
-  font-family: "Greycliff CF";
   font-size: 19.378px;
   font-style: normal;
   font-weight: 700;
@@ -2631,9 +2634,7 @@ picture:hover img {
 .counter-card p {
   color: var(--Grey, #818184);
   text-align: center;
-  font-family: "Greycliff CF";
   font-size: 18.323px;
-
   font-weight: 400;
   line-height: normal;
 }
@@ -2641,7 +2642,6 @@ picture:hover img {
 .counter-card-hero p {
   color: var(--Grey, #818184);
   text-align: center;
-  font-family: "Greycliff CF";
   font-size: 11.627px;
   font-style: normal;
   font-weight: 400;
@@ -2685,27 +2685,23 @@ picture:hover img {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 4px;
   box-shadow: 0px 4.174px 20.872px 0px rgba(43, 43, 43, 0.14);
 }
 
 .ty-counter-card h6 {
   color: #49887b;
   text-align: center;
-  font-family: "Greycliff CF";
   font-size: 20.872px;
-
   font-weight: 700;
-  line-height: normal;
+  line-height: 13px;
 }
 
 .ty-counter-card p {
   color: var(--Grey, #818184);
   text-align: center;
-  font-family: "Greycliff CF";
   font-size: 12.523px;
-
   font-weight: 400;
-  line-height: normal;
 }
 
 .ty-video {
